--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,11 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
- <router-outlet></router-outlet>
+
+<div class="container">
+    <div class="row">
+        <div class="col-md-12 mt-4">
+            <router-outlet></router-outlet>
+        </div>
+    </div>
 </div>
  
 
