--- a/src/app/components/list-game/list-game.component.html
+++ b/src/app/components/list-game/list-game.component.html
@@ -14,8 +14,8 @@
       <tr>
         <th hidden>Id</th>
         <th>Name</th>
-        <th>Age</th>
         <th>Price</th>
+        <th>Number of participants</th>
       </tr>
       </thead>
       <tbody>
